@@ -1,16 +1,16 @@
 Installation instructions for all systems
 =========================================
 
-Requirements: 
+Requirements:
 -------------
 
-- Python v2.2 (or higher) 
+- Python v2.2 (or higher)
   http://www.python.org/
 
 - ODE 0.5
   http://ode.org/
 
-- Pyrex 0.9.3 (or higher) 
+- Pyrex 0.9.3 (or higher)
   http://www.cosc.canterbury.ac.nz/~greg/python/Pyrex/
   This is only required for PyODE development; you don't need it to install
   and run PyODE.
@@ -26,17 +26,18 @@ and install it by calling
 
   python setup.py install
 
-which installs the package on your system. 
-See the "Installing Python Modules" manual inside your Python documentation 
+which installs the package on your system.
+See the "Installing Python Modules" manual inside your Python documentation
 or at http://docs.python.org/inst/inst.html if you want to customize the
 build process or the target location.
 
 
 Note: It is assumed that the ODE library is already compiled and installed
-somewhere on your system. In the setup script there's a variable ODE_BASE
-that points to the base ODE directory. It might be possible that you have
-to modify this variable so that it points to the actual location on your
-system.
+somewhere on your system. The setup script will try to find the ODE
+installation on your system by trying several common locations. However, if the
+installation can not be found, you will have to modify the variables ODE_BASE
+and/or USER_SETTINGS at the top of the setup.py script to point to the
+installation.
 
 ODE can either be compiled with or without trimesh support. The setup script
 checks your ODE user-settings file to determine whether is is supported. If
