@@ -7,6 +7,9 @@
 # Set to the base of your ODE installation.
 #ODE_BASE = '../ode'
 
+# Set to the location of your ODE user-settings file.
+#USER_SETTINGS = '../ode/config/user-settings'
+
 # Set to True or False to force trimesh support to be enabled or disabled.
 #TRIMESH_SUPPORT_OVERRIDE = True
 
@@ -17,17 +20,19 @@ import distutils.sysconfig
 import shutil, os, os.path, sys, glob
 from stat import *
 
+
+base = []
+
 # Windows?
 if sys.platform=="win32":
 
     try:
-        base = ODE_BASE
+        base = [ODE_BASE]
     except NameError:
-        ODE_BASE = "../ode_single_trimesh"
-        #ODE_BASE = "../ode_double_notrimesh"
-    
-    INC_DIRS = [os.path.join(ODE_BASE, "include")]
-    LIB_DIRS = [os.path.join(ODE_BASE, "lib")]
+		base = []
+		base.append("../ode_single_trimesh")
+		base.append("../ode_double_notrimesh")
+
     LIBS     = ["ode", "user32"]  # user32 because of the MessageBox() call
     CC_ARGS  = ["/ML"]
 
@@ -35,29 +40,91 @@ if sys.platform=="win32":
 else:
 
     try:
-        base = ODE_BASE
+		base = [ODE_BASE]
     except NameError:
-        ODE_BASE = "../ode"
+		base = []
+		base.append("/usr")
+		base.append("/usr/local")
+		base.append("../ode")
 
-    INC_DIRS = [os.path.join(ODE_BASE, "include")]
-    LIB_DIRS = [os.path.join(ODE_BASE, "lib")]
     LIBS     = ["ode", "stdc++"]
     CC_ARGS  = []
+
+
+# Look for an ODE user-settings file.
+def findODEConfig(prefix):
+	try:
+		suffix = [USER_SETTINGS]
+		prefix = ''
+	except NameError:
+		suffix = [os.path.join('config', 'user-settings'),
+				  os.path.join('include', 'ode', 'config', 'user-settings'),
+				  os.path.join('share', 'ode-0.5', 'config', 'user-settings')]
+
+	for s in suffix:
+		path = os.path.normpath(os.path.join(prefix, s))
+		if (os.path.exists(path)):
+			return path
+
+	return None
+
+# Find an ODE installation.
+ODE_BASE = None
+for path in base:
+	if (not os.path.exists(path)):
+		continue
+
+	c = findODEConfig(path)
+	if (c is None):
+		continue
+
+	if (not os.path.exists(os.path.join(path, 'include'))):
+		continue
+
+	if (not os.path.exists(os.path.join(path, 'lib'))):
+		continue
+
+	ODE_BASE = path
+	break
+
+
+if (ODE_BASE is None):
+	print
+	print "Error: ODE installation not found."
+	print
+	print "The following installation bases were checked:"
+	for path in base:
+		print "    -", path
+	print
+	print 'This Python ODE wrapper assumes that you have a compiled version of'
+	print 'the ODE library already somewhere on your system. The path to the'
+	print 'ODE installation has to be set in the setup script via the variable'
+	print 'ODE_BASE and the path to the user-settings file has to be set via'
+	print 'the variable USER_SETTINGS. Please change these variables so that'
+	print 'they point to the actual location of your ODE installation.'
+	sys.exit(1)
+
+
+print 'Using "%s" as base of ODE installation.' % ODE_BASE
+
+
+INC_DIRS = [os.path.join(ODE_BASE, "include")]
+LIB_DIRS = [os.path.join(ODE_BASE, "lib")]
 
 ######################################################################
 
 def readODEConfig():
     config = {}
-    
-    filename = os.path.normpath(os.path.join(ODE_BASE, "config", "user-settings"))
-    print 'Reading ODE configuration "%s"...' % filename
+
+    filename = findODEConfig(ODE_BASE)
+    print 'Reading ODE user-settings from "%s".' % filename
 
     try:
         f = file(filename)
     except IOError, e:
         print "ERROR:", e
         raise RuntimeError
-        
+
     for line in f.readlines():
         s = line.strip()
 
@@ -102,7 +169,7 @@ def readODEConfig():
 # Generate the C source file (if necessary)
 def generate(name, trimesh_support):
     # Generate the trimesh_switch file
-    
+
     f = file("_trimesh_switch.pyx", "wt")
     print >>f, '# This file was generated by the setup script and is included in ode.pyx.\n'
     if (trimesh_support):
@@ -111,7 +178,7 @@ def generate(name, trimesh_support):
     else:
         print >>f, 'include "trimesh_dummy.pyx"'
     f.close()
-    
+
     cmd = "pyrexc -o %s -I. -Isrc src/ode.pyx" % name
     pyrex_out = name
 
@@ -140,15 +207,6 @@ def generate(name, trimesh_support):
         print "An error occured while generating the C source file."
         sys.exit(err)
 
-# Check if the ODE_BASE path does exist
-if not os.path.exists(ODE_BASE):
-    print """This Python ODE wrapper assumes that you have a compiled version of
-the ODE library already somewhere on your system. The path to the ODE
-distribution has to be set in the setup script via the variable
-ODE_BASE. Currently it points to "%s".
-However, that path does not exist. So please change the variable inside the
-script so that it points to the actual location of the ODE directory."""%ODE_BASE
-    sys.exit()
 
 config = readODEConfig()
 
@@ -180,5 +238,5 @@ setup(name = "PyODE",
                      ,libraries=LIBS
                      ,include_dirs=INC_DIRS
                      ,library_dirs=LIB_DIRS
-                     ,extra_compile_args=CC_ARGS)                   
+                     ,extra_compile_args=CC_ARGS)
                     ])
